--- a/index.html
+++ b/index.html
@@ -4,4 +4,7 @@
     <meta charset="utf-8">
     <title>My Programming Portfolio</title>
   </head>
-
+<body>
+  <hl> Welcome to My Portfolio</hl>
+  </body>
+</html>
