--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>My Programming Portfolio</title>
   </head>
 <body>
+  <img src="csc106_banner.jpeg">
   <hl> Welcome to My Portfolio</hl>
   </body>
 </html>
