--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>My Programming Portfolio</title>
   </head>
 <body>
-  <img src="csc106_banner.jpeg">
+  <img src="https://lh5.googleusercontent.com/VaXB28CEqHgn-dSMXjBq5Zr3l1xc42MjG7YB9yWiNGRiQ7l1uOG08xqDKxYMYbVf9KomR1pKsZh-FT5B_49COERuOBuoARRX9WvNEbF7fkvn8Y0ikwjmUIU7C9x8v_s4ckyMZMP-yMuc7Vwa_FDPoUvyfnNdrq3C40XuPCmNrHpXg0zRGkDMpgk7">
   <hl> Welcome to My Portfolio</hl>
   </body>
 </html>
