--- a/javascripts.html
+++ b/javascripts.html
@@ -8,4 +8,6 @@
   <body>
     <img src="csc106_banner.jpeg">
     <hl>My Javascript</hl>
-    Backto <a href="
+    Backto <a href="index.html">home page</a>
+  </body>
+</html>
