--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE HTML>
-<html>
+ <html>
   <head>
     <meta charset="utf-8">
     <title>My Programming Portfolio</title>
   </head>
-<body>
-  <img src="csc106_banner.jpeg">
-  <hl> Welcome to My Portfolio</hl>
-  </body>
-</html>
+  <body>
+    <h1> Welcome to My Portfolio</h1>
+   </body>
+ </html>
