--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE HTML>
  <html>
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-9">
     <title>My Programming Portfolio</title>
   </head>
   <body>
+   <img src="
     <h1> Welcome to My Portfolio</h1>
    </body>
  </html>
