--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE HTML>
  <html>
   <head>
-    <meta charset="utf-12">
+    <meta charset="utf-15">
     <title>My Programming Portfolio</title>
   </head>
   <body>
-   <img src="csc106_banner.jpeg">
+   <img src="">
     <h1> Welcome to My Portfolio</h1>
    </body>
  </html>
