--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>My Programming Portfolio</title>
   </head>
   <body>
-   <img src="">
+   <img src="https://csc106_banner.jpg">
     <h1> Welcome to My Portfolio</h1>
    </body>
  </html>
