--- a/javascripts.html
+++ b/javascripts.html
@@ -1,1 +1,12 @@
-
+<!DOCTYPE HTML>
+ <html>
+  <head>
+    <meta charset="utf-8">
+    <title>My Programming Portfolio</title>
+  </head>
+  <body>
+   <img src="csc106_banner.jpg">
+    <h1> Welcome to My Portfolio</h1>
+    Back to <a href="index.html">home page</a>
+   </body>
+ </html>
