--- a/javascripts.html
+++ b/javascripts.html
@@ -2,11 +2,11 @@
  <html>
   <head>
     <meta charset="utf-8">
-    <title>My Programming Portfolio</title>
+    <title>My Javascripts Page</title>
   </head>
   <body>
    <img src="csc106_banner.jpg">
-    <h1> Welcome to My Portfolio</h1>
+    <h1>My Javascript</h1>
     Back to <a href="index.html">home page</a>
    </body>
  </html>
