--- a/index.html
+++ b/index.html
@@ -8,4 +8,11 @@
    <img src="csc106_banner.jpg">
     <h1> Welcome to My Portfolio</h1>
    </body>
+  <table>
+   <thead>
+    <tr>
+     <th> <img src="https://lh5.googleusercontent.com/iqFzR5iQQ-FDLIXEaHtFdNq-JJD5igHgvqOWdH5FTKA2JIZGOB9fwV2GCILQOPZ9BJqKhEshDi4qPZx5BHfyrJU90MFvKJLUJ1bmVlWzj7c1SDpDDOpuq-m2Vddxm22zaqydSdxdYjfTdWEsJo0fDS9Bcy9MmKzziuVFwD0hTB0qS_1VkW-N23R-"
+    </tr>
+   </thead>
+  </table>
  </html>
