--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <table>
    <thead>
     <tr>
-     <th> Crimp</th>
+     <th><img src="https://lh5.googleusercontent.com/iqFzR5iQQ-FDLIXEaHtFdNq-JJD5igHgvqOWdH5FTKA2JIZGOB9fwV2GCILQOPZ9BJqKhEshDi4qPZx5BHfyrJU90MFvKJLUJ1bmVlWzj7c1SDpDDOpuq-m2Vddxm22zaqydSdxdYjfTdWEsJo0fDS9Bcy9MmKzziuVFwD0hTB0qS_1VkW-N23R-"></th>
     </tr>
    </thead>
   </table>
