--- a/index.html
+++ b/index.html
@@ -17,4 +17,10 @@
    </tr>
    </thead>
   </table>
+  
+  <body>
+   <p>
+    Hi, My name is Ethan Lundsten and I am a sophmore, almost junior at the University of Rhode Island.
+   </p>
+  </body>
  </html>
