--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
   
   <body>
    <p>
-    Hi, My name is Ethan Lundsten and I am a sophmore, almost junior at the University of Rhode Island.
+    Hi, My name is Ethan Lundsten and I am a sophmore, almost junior at the University of Rhode Island.<br>
+    This is the first webpage assignment of the semester for CSC106. This page is a personal portfolio that I will be adding to in the future.<br>
+    I am excited for this course, and I'm looking foward to greatly imporving my coding skills and this webpage as a result.
    </p>
   </body>
  </html>
