--- a/javascripts.html
+++ b/javascripts.html
@@ -5,7 +5,7 @@
     <title>My Javascripts Page</title>
   </head>
   <body>
-   <img src="https://github.com/ethanlundsten/ethanlundsten.github.io/blob/main/csc106_banner.jpg">
+   <img src="csc106_banner.jpg">
     <h1>My Javascript</h1>
     Back to <a href="index.html">home page</a>
    </body>
