--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   <table>
    <thead>
     <tr>
-     <th><a href="https://github.com/ethanlundsten/ethanlundsten.github.io/blob/main/index.html"</a><img src="https://lh5.googleusercontent.com/iqFzR5iQQ-FDLIXEaHtFdNq-JJD5igHgvqOWdH5FTKA2JIZGOB9fwV2GCILQOPZ9BJqKhEshDi4qPZx5BHfyrJU90MFvKJLUJ1bmVlWzj7c1SDpDDOpuq-m2Vddxm22zaqydSdxdYjfTdWEsJo0fDS9Bcy9MmKzziuVFwD0hTB0qS_1VkW-N23R-"></th>
-     <th><a href="https://github.com/ethanlundsten/ethanlundsten.github.io/blob/main/javascripts.html"</a><img src="https://lh6.googleusercontent.com/xmXulrxIpFvVEwxT6SoK5KizIY-Ab50DH_-YkZJDkRNvR5SxZSgCygeC8pVG7dgUWAghq394O4fcAa0Xs66BmrcEZfGTSL_teiXSSOJ0u0QI0k5TXZ1zL-ePiHOZ2tMf83h9xrw11SUMGA61svekVu9q1bSUNS7Sbm1cYwSt0VADAdD4VI-khnO9"></th>
-     <th><a href="https://github.com/ethanlundsten/ethanlundsten.github.io/blob/main/aboutme.html"</a><img src="https://lh5.googleusercontent.com/fJr6weMLVZr3Neofo_-Z5iA7GB1AAm_2WSPgX7vSKuCE6at5tZu3D141mIY12p5vmTxiqoUdgcRff_OTvPPRMARkYUrRQh6J4MF_rqNDCTzcsDLNFuccpeyeCIOhi4gk1sf7RWq99u0zVR5j32LL3yL29jIHFoiWB3owQd3TZOkXbqZ1KExrzeNQ"></th>
+     <th><a href="https://ethanlundsten.github.io/"</a><img src="https://lh5.googleusercontent.com/iqFzR5iQQ-FDLIXEaHtFdNq-JJD5igHgvqOWdH5FTKA2JIZGOB9fwV2GCILQOPZ9BJqKhEshDi4qPZx5BHfyrJU90MFvKJLUJ1bmVlWzj7c1SDpDDOpuq-m2Vddxm22zaqydSdxdYjfTdWEsJo0fDS9Bcy9MmKzziuVFwD0hTB0qS_1VkW-N23R-"></th>
+     <th><a href="https://ethanlundsten.github.io/javascripts.html"</a><img src="https://lh6.googleusercontent.com/xmXulrxIpFvVEwxT6SoK5KizIY-Ab50DH_-YkZJDkRNvR5SxZSgCygeC8pVG7dgUWAghq394O4fcAa0Xs66BmrcEZfGTSL_teiXSSOJ0u0QI0k5TXZ1zL-ePiHOZ2tMf83h9xrw11SUMGA61svekVu9q1bSUNS7Sbm1cYwSt0VADAdD4VI-khnO9"></th>
+     <th><a href="https://ethanlundsten.github.io/aboutme.html"</a><img src="https://lh5.googleusercontent.com/fJr6weMLVZr3Neofo_-Z5iA7GB1AAm_2WSPgX7vSKuCE6at5tZu3D141mIY12p5vmTxiqoUdgcRff_OTvPPRMARkYUrRQh6J4MF_rqNDCTzcsDLNFuccpeyeCIOhi4gk1sf7RWq99u0zVR5j32LL3yL29jIHFoiWB3owQd3TZOkXbqZ1KExrzeNQ"></th>
    </tr>
    </thead>
   </table>
