--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>My Programming Portfolio</title>
   </head>
   <body>
-   <img src="csc106_banner.jpg">
+   <img src="Banner.jpg">
     <h1> Welcome to My Portfolio</h1>
    </body>
   <table>
