--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <title>My Programming Portfolio</title>
   </head>
   <body>
-   <img src="Banner.jpg">
+   <img src="Banner.jpg"
+        height:"400">
     <h1> Welcome to My Portfolio</h1>
    </body>
   <table>
