--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
     <title>My Programming Portfolio</title>
   </head>
   <body>
-   <img src="Banner.jpg"
-        height:"400">
-    <h1> Welcome to My Portfolio</h1>
+   <img src="Banner.jpg">
    </body>
   <table>
    <thead>
