--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   </head>
   <body>
    <img src="Banner.jpg"
-        height="200"/>
+        height="250"
+        width="700"/>
    </body>
   <table>
    <thead>
