--- a/aboutme.html
+++ b/aboutme.html
@@ -6,7 +6,9 @@
   </head>
 
   <body>
-   <img src="csc106_banner.jpg">
+   <img src="Banner.jpg"
+        height="250"
+        width="700"/>
     <h1>About ME</h1>
      <body>
    <p>Hello. My name is Ethan Lundsten. I am 20 years old and a sophmore, going on junior, at URI. I was born on Long Island, New York and lived there for a chunk of my life.
