--- a/javascripts.html
+++ b/javascripts.html
@@ -5,7 +5,9 @@
     <title>My Javascripts Page</title>
   </head>
   <body>
-   <img src="csc106_banner.jpg">
+   <img src="Banner.jpg"
+        height="250"
+        width="700"/>
     <h1>My Javascript</h1>
     Back to <a href="index.html">home page</a>
    </body>
